force-app/main/default/objects/Policies__x/Policies__x.object-meta.xml
<CustomObject>
    <description>Policies</description>
    <externalDataSource>Salesforce_Connect</externalDataSource>
    <externalName>Policies</externalName>
    <label>Policies</label>
    <pluralLabel>Policies</pluralLabel>
</CustomObject>