force-app/main/default/objects/Policies__x/fields/NumberOfUnits__c.field-meta.xml
<CustomField>
    <fullName>NumberOfUnits__c</fullName>
    <description>NumberOfUnits</description>
    <externalDeveloperName>NumberOfUnits</externalDeveloperName>
    <label>NumberOfUnits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>