force-app/main/default/objects/Policies__x/fields/PolicyEndDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyEndDate__c</fullName>
    <description>PolicyEndDate</description>
    <externalDeveloperName>PolicyEndDate</externalDeveloperName>
    <label>PolicyEndDate</label>
    <type>Date</type>
</CustomField>