force-app/main/default/objects/Policies__x/fields/PolicyHolderId__c.field-meta.xml
<CustomField>
    <fullName>PolicyHolderId__c</fullName>
    <description>PolicyHolderId</description>
    <externalDeveloperName>PolicyHolderId</externalDeveloperName>
    <label>PolicyHolderId</label>
    <length>128</length>
    <referenceTargetField>Account.Policy_Holder_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>IndirectLookup</type>
</CustomField>