force-app/main/default/objects/Policies__x/fields/PolicyStartDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyStartDate__c</fullName>
    <description>PolicyStartDate</description>
    <externalDeveloperName>PolicyStartDate</externalDeveloperName>
    <label>PolicyStartDate</label>
    <type>Date</type>
</CustomField>