force-app/main/default/objects/Policies__x/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <description>ProductId</description>
    <externalDeveloperName>ProductId</externalDeveloperName>
    <label>ProductId</label>
    <length>128</length>
    <referenceTo>Products__x</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>ExternalLookup</type>
</CustomField>