force-app/main/default/objects/Policies__x/fields/TotalCostAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalCostAmount__c</fullName>
    <description>TotalCostAmount</description>
    <externalDeveloperName>TotalCostAmount</externalDeveloperName>
    <label>TotalCostAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>