force-app/main/default/objects/Policies__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Active__c</columns>
    <columns>Id__c</columns>
    <columns>NumberOfUnits__c</columns>
    <columns>PolicyEndDate__c</columns>
    <columns>PolicyHolderId__c</columns>
    <columns>PolicyStartDate__c</columns>
    <columns>ProductId__c</columns>
    <columns>TotalCostAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>